welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value c
  c = Math.abs(a-10)
  ^close10:3: error: not found: value d
  d = Math.abs(b-10)
  ^close10:4: error: not found: value c
  if (c-d == 0){
      ^close10:4: error: not found: value d
  if (c-d == 0){
        ^close10:7: error: not found: value c
  if((c-d) < 0){
      ^close10:7: error: not found: value d
  if((c-d) < 0){
        ^