welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  c = Math.abs(a-10)
  d = Math.abs(b-10)
  if (c-d == 0){
    return 0
  }
  if((c-d) < 0){
    return a
  }
  return b
}

